# chat-rs

./: README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: channel.rs  channels.rs  client.rs  irc.rs  lib.rs  main.old.rs  main.rs  prelude.rs  thread_pool.rs
