[package]
name = "server"
version = "0.1.0"
authors = ["Flávio Lúcio <flaviolc18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chat"
path = "src/lib.rs"

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"